Try fix issue #23 TOC block overlapping carousel element
- Bump jquery version to 3.3.1
- Bump Bootstrap version to 3.3.7

--- a/reflow-maven-skin/src/main/resources/css/reflow-skin.css
+++ b/reflow-maven-skin/src/main/resources/css/reflow-skin.css
@@ -193,7 +193,7 @@ a[name]:before {
  *--------------------------------------------------*/
 
 #toc-bar {
-    z-index:1120;
+    z-index:1010; /*must be < nav-bar bootstrap container  1020 */
 }
 
 /*--------------------------------------------------
@@ -204,7 +204,7 @@ a[name]:before {
 */
 #toc-sidebar {
     margin-top: 10px;
-    z-index: 1100;
+    z-index: 1010; /*must be < nav-bar bootstrap container  1020 */
 }
 
 #toc-sidebar.affix {
@@ -282,7 +282,7 @@ a[name]:before {
  *--------------------------------------------------*/
 
 .breadcrumb {
-    z-index: 1020;
+    z-index: 1000; /*must be < nav-bar bootstrap container  1020 */
     position: relative;
 }
 
